--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.localsearch'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.localsearch"
-        minSdk 24
+        minSdk 21
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api" //ExperimentalMaterial3Api 어노테이션 안 붙어도 되도록 추가
     }
     buildFeatures {
         compose true
@@ -56,6 +57,9 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    // nav
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
