--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,14 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3-android:1.2.0-rc01'
     // nav
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    // viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    // Retrofit 추가
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
